--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -17,19 +17,19 @@
 
 <body>
 	<nav>
-		<ul data-component="Nav" data-id="/UID/">
-			<li><a href="/404.html" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_0">Go error404</a></li>
-			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_1">Go home</a></li>
-			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_2">Go homeJump1</a></li>
-			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_3">Go homeJump2</a></li>
-			<li><a href="/ssg/no/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_4">Go ssgNo</a></li>
-			<li><a href="/ssg/yes/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_5">Go ssgYes</a></li>
-			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_6">Go ssgYesJump1</a></li>
-			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_7">Go ssgYesJump2</a></li>
+		<ul data-component="Nav" data-id="/UID6/">
+			<li><a href="/404.html" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_0">Go error404</a></li>
+			<li><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_1">Go home</a></li>
+			<li><a href="/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_2">Go homeJump1</a></li>
+			<li><a href="/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_3">Go homeJump2</a></li>
+			<li><a href="/ssg/no/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_4">Go ssgNo</a></li>
+			<li><a href="/ssg/yes/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_5">Go ssgYes</a></li>
+			<li><a href="/ssg/yes/#jump1" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_6">Go ssgYesJump1</a></li>
+			<li><a href="/ssg/yes/#jump2" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID6/_7">Go ssgYesJump2</a></li>
 		</ul>
 	</nav>
 	<main>
-		<div data-component="IndexPage" data-id="/UID/">
+		<div data-component="IndexPage" data-id="/UID5/">
 			<h1>Hello world!</h1>
 			<div id="jump1">Jump 1</div>
 			<ol data-component="List" data-id="mylist">
@@ -43,7 +43,7 @@
 			<h2>This is a variable</h2>
 			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-			<p><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID/_0">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
+			<p><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID5/_0">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
 			<h2>Headline 2</h2>
 			<blockquote>
 				<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
@@ -68,7 +68,7 @@
 				<li> ut aliquip ex</li>
 			</ol>
 			<div id="jump2">Jump 2</div>
-		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{value:'hello'},'/UID/_0':{idAttr:'',isExternal:false},'/UID/_1':{idAttr:'',isExternal:false},'/UID/_2':{idAttr:'jump1',isExternal:false},'/UID/_3':{idAttr:'jump2',isExternal:false},'/UID/_4':{idAttr:'',isExternal:false},'/UID/_5':{idAttr:'',isExternal:false},'/UID/_6':{idAttr:'jump1',isExternal:false},'/UID/_7':{idAttr:'jump2',isExternal:false}}"></script>
+		</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID5/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{value:'hello'},'/UID5/_0':{idAttr:'',isExternal:false},'/UID6/_0':{idAttr:'',isExternal:false},'/UID6/_1':{idAttr:'',isExternal:false},'/UID6/_2':{idAttr:'jump1',isExternal:false},'/UID6/_3':{idAttr:'jump2',isExternal:false},'/UID6/_4':{idAttr:'',isExternal:false},'/UID6/_5':{idAttr:'',isExternal:false},'/UID6/_6':{idAttr:'jump1',isExternal:false},'/UID6/_7':{idAttr:'jump2',isExternal:false}}"></script>
 	</main>
 </body>
 
