--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -42,7 +42,7 @@
 		<h2>This is a variable</h2>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p><a href="/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID3/_0">Link to homepage</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
+		<p><a href="/ssg/yes/" onclick="this.closest('[data-component=Link]').instance.onClick(event,)" data-component="Link" data-id="/UID3/_0">Link to SSG Yes</a></p><button type="button" onclick="this.closest('[data-component=IndexPage]').instance.anchorlessRoute(event,)">Go to SSG Yes</button>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
