--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703788383359" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1703788383359"> <script type="module">import { IndexPage } from '/pages-LRIWCL3H.js';IndexPage.init();</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703788829069" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1703788829069"> <script type="module">import { IndexPage } from '/pages-HZBTGD2U.js';IndexPage.init();</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-listitem"></style>
 	<style data-style="l-list"></style>
@@ -13,7 +13,7 @@
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1703788383359">
+	<link rel="stylesheet" href="/index.html.css?cache=1703788829069">
 </head>
 
 <body>
@@ -37,12 +37,12 @@
 		<ol id="UID16_" is="l-list">
 			<li>List ID UID16_</li>
 			<li id="UID13_" is="l-listitem" data-value="hello">
-				<p>List item ID UID13_</p> <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button>
+				<p>List item ID UID13_</p>
 				<div id="UID13_-txt" is="l-textbox" data-maxlength="10" data-value="hello"><input maxlength="10" oninput="this.closest(`[is='l-textbox']`).handleInput(event)" placeholder="Type here" type="text" value="hello"><span></span>
 					<p>textbox ID UID13_-txt</p>
-				</div> <button type="button">Remove</button>
+				</div> <button onclick="this.closest(`[is='l-listitem']`).onRemove(event)" type="button">Remove</button>
 			</li>
-			<li> <button onclick="this.closest(`[is='l-list']`).onAdd(event)" type="button">Add</button></li>
+			<li> <button onclick="this.closest(`[is='l-list']`).onAdd(event)" type="button">Add</button> </li>
 		</ol>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
